--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         externalNativeBuild {
             cmake {
-                cppFlags ''
+                cppFlags ""
             }
         }
     }
@@ -27,6 +27,13 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+    ndkVersion '23.0.7599858'
+    externalNativeBuild {
+        cmake {
+            path "src/main/cpp/CMakeLists.txt"
+            version "3.18.1"
         }
     }
     android.buildFeatures.viewBinding = true
@@ -39,15 +46,17 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+/*    ndkVersion '23.0.7599858'
     externalNativeBuild {
         cmake {
             path file('src/main/cpp/CMakeLists.txt')
-            version '3.10.2'
+            version "3.18.1"
         }
-    }
-    buildFeatures {
+    }*/
+  /*  buildFeatures {
         viewBinding true
-    }
+    }*/
 }
 
 dependencies {
