--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,9 +46,9 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
@@ -56,9 +56,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-
     implementation "androidx.activity:activity-ktx:1.4.0"
-    implementation "androidx.fragment:fragment-ktx:1.3.6"
+    implementation "androidx.fragment:fragment-ktx:1.4.0"
 
     // For local unit tests
     testImplementation 'com.google.dagger:hilt-android-testing:2.38.1'
@@ -102,7 +101,5 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
     //paging3
-    implementation 'androidx.paging:paging-runtime-ktx:3.1.0-rc01'
-//optional dependency for RxJava support
-    implementation 'androidx.paging:paging-rxjava2-ktx:3.1.0-rc01'
+    implementation 'androidx.paging:paging-runtime-ktx:3.1.0'
 }
